feat: implement user authentication for workout upload and exercise history retrieval; refactor endpoints to use authenticated user context