@@ -1,6 +1,5 @@
 package com.WorkoutHub.workout_hub.service;
 
-
 import com.WorkoutHub.workout_hub.dto.request.WorkoutUploadRequest;
 import com.WorkoutHub.workout_hub.dto.response.*;
 import com.WorkoutHub.workout_hub.entity.*;
@@ -14,7 +13,6 @@ import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
-import java.time.Duration;
 import java.time.OffsetDateTime;
 import java.util.*;
 import java.util.stream.Collectors;
@@ -22,6 +20,10 @@ import java.util.stream.Collectors;
 @Service
 @RequiredArgsConstructor
 public class WorkoutTrackingService {
+
+    /** Result of saving a workout: response + whether it was already synced (idempotent). */
+    public record SaveWorkoutResult(WorkoutUploadResponse response, boolean alreadySynced) {}
+
     private final ExerciseInfoRepo exerciseInfoRepo;
     private final ExerciseInfoMapper exerciseInfoMapper;
     private final MuscleRepo muscleRepo;
@@ -29,56 +31,46 @@ public class WorkoutTrackingService {
     private final WorkoutMapper workoutMapper;
     private final GymRatRepo gymRatRepo;
     private final SetRepo setRepo;
-    /**
-     * Retrieves the complete exercise library containing all muscles and exercises with their muscle mappings.
-     * @return {@link ExerciseLibraryResponse} containing lists of muscles and exercises
-     */
-    @Transactional(readOnly = true)
-    public ExerciseLibraryResponse getExerciseLibrary(){
-        var musclesEntity = muscleRepo.findAllByOrderByNameAsc();
-        var exercisesEntity = exerciseInfoRepo.findAllWithMuscles();
 
-        var musclesDto = exerciseInfoMapper.toMuscleDtoList(musclesEntity);
-        var exercisesDto = exerciseInfoMapper.toExerciseInfoDtoList(exercisesEntity);
+    /** Get full exercise library (muscles + exercises). */
+    @Transactional(readOnly = true)
+    public ExerciseLibraryResponse getExerciseLibrary() {
+        List<Muscle> muscles = muscleRepo.findAllByOrderByNameAsc();
+        List<ExerciseInfo> exercises = exerciseInfoRepo.findAllWithMuscles();
 
         return ExerciseLibraryResponse.builder()
-                .muscles(musclesDto)
-                .exercises(exercisesDto)
+                .muscles(exerciseInfoMapper.toMuscleDtoList(muscles))
+                .exercises(exerciseInfoMapper.toExerciseInfoDtoList(exercises))
                 .build();
     }
 
-
     /**
-     * Saves a completed workout uploaded from the mobile app.
-     * Uses CLIENT-GENERATED UUIDs for idempotency (prevents duplicate uploads).
-     * Creates both Workout and WorkoutPost entities (inseparable).
-     * Calculates total volume, number of sets, and duration.
-     * Returns the saved workout along with exercise history summary for cache update.
+     * Save a workout uploaded from the mobile app.
+     * Idempotent: returns 200 if already synced, 201 if newly saved.
+     * Creates Workout + WorkoutPost with client-provided UUIDs and timestamps.
      *
-     * @param request Workout data from mobile app (includes client-generated UUIDs)
-     * @param userId User who performed the workout
-     * @return Response containing workout ID, sync timestamp, and new exercise history
+     * @param request Workout data with client-generated UUIDs
+     * @param userId  User performing the workout
+     * @return Result with response and sync status
      */
     @Transactional
-    public WorkoutUploadResponse saveWorkout(WorkoutUploadRequest request, UUID userId) {
+    public SaveWorkoutResult saveWorkout(WorkoutUploadRequest request, UUID userId) {
         if (workoutRepo.existsById(request.getWorkoutId())) {
             Workout existingWorkout = workoutRepo.findById(request.getWorkoutId())
                     .orElseThrow(() -> new ResourceNotFoundException(
                             "Workout not found with id: " + request.getWorkoutId()));
-            return buildWorkoutResponse(existingWorkout);
+            return new SaveWorkoutResult(buildWorkoutResponse(existingWorkout, userId), true);
         }
-
 
         GymRat gymRat = gymRatRepo.findById(userId)
                 .orElseThrow(() -> new ResourceNotFoundException("User not found with id: " + userId));
 
-
-        long durationMinutes = Duration.between(request.getStartedAt(), request.getCompletedAt()).toMinutes();
-
+        OffsetDateTime performedAt = request.getPerformedAt();
 
         Workout workout = Workout.builder()
                 .id(request.getWorkoutId())
                 .gymRat(gymRat)
+                .performedAt(performedAt)
                 .totalVolume(0.0)
                 .numberOfSets(0)
                 .exercises(new ArrayList<>())
@@ -87,37 +79,30 @@ public class WorkoutTrackingService {
         double totalVolume = 0.0;
         int totalSets = 0;
 
-
         for (var exerciseDto : request.getExercises()) {
             ExerciseInfo exerciseInfo = exerciseInfoRepo.findById(exerciseDto.getExerciseInfoId())
                     .orElseThrow(() -> new ResourceNotFoundException(
                             "Exercise not found with id: " + exerciseDto.getExerciseInfoId()));
 
-
             Exercise exercise = Exercise.builder()
                     .id(exerciseDto.getExerciseUuid())
                     .exerciseInfo(exerciseInfo)
                     .orderInWorkout(exerciseDto.getOrderInWorkout())
+                    .performedAt(performedAt)
                     .sets(new ArrayList<>())
                     .build();
-
 
             for (var setDto : exerciseDto.getSets()) {
                 Set set = workoutMapper.toEntity(setDto);
                 set.setId(setDto.getSetUuid());
-
-
+                set.setPerformedAt(performedAt);
                 exercise.addSet(set);
-
-
                 totalVolume += set.getWeight() * set.getReps();
                 totalSets++;
             }
 
-
             workout.addExercise(exercise);
         }
-
 
         workout.setTotalVolume(totalVolume);
         workout.setNumberOfSets(totalSets);
@@ -126,69 +111,73 @@ public class WorkoutTrackingService {
                 .id(request.getWorkoutPostId())
                 .title(request.getTitle())
                 .caption(request.getCaption())
-                .startTime(request.getStartedAt())
-                .finishTime(request.getCompletedAt())
-                .duration((int) durationMinutes)
+                .duration(request.getDuration())
                 .visibility(request.getVisibility())
                 .workout(workout)
                 .build();
 
-
         workout.setWorkoutpost(workoutPost);
         Workout savedWorkout = workoutRepo.save(workout);
 
-        return buildWorkoutResponse(savedWorkout);
+        return new SaveWorkoutResult(buildWorkoutResponse(savedWorkout, userId), false);
     }
 
-
     /**
-     * Retrieves exercise history for a user.
-     * If 'since' is null, returns full history (for initial load/reinstall).
-     * If 'since' is provided, returns only sets performed after that timestamp (delta sync).
+     * Get exercise history for a user.
+     * Returns full history if since is null, otherwise delta sync.
      *
      * @param userId User ID
-     * @param since Optional timestamp for delta sync (null = full history)
-     * @return Exercise history grouped by exercise
+     * @param since  Optional timestamp for delta sync
+     * @return Exercise history with history_map and last_workout_layout
      */
     @Transactional(readOnly = true)
     public ExerciseHistoryResponse getUserExerciseHistory(UUID userId, OffsetDateTime since) {
         if (!gymRatRepo.existsById(userId)) {
             throw new ResourceNotFoundException("User not found with id: " + userId);
         }
-        List<Set> sets = setRepo.findSetsByUserIdAndSince(userId, since);
 
-        // Group sets by exercise
-        Map<Integer, List<Set>> setsByExercise = sets.stream()
-                .collect(Collectors.groupingBy(
-                        set -> set.getExercise().getExerciseInfo().getId()
-                ));
+        List<Set> historyMapSets;
+        List<Integer> exerciseInfoIds;
 
+        if (since == null) {
+            historyMapSets = setRepo.findHistoryMapByUserId(userId);
+            exerciseInfoIds = extractDistinctExerciseInfoIds(historyMapSets);
+        } else {
+            exerciseInfoIds = setRepo.findExerciseInfoIdsPerformedSince(userId, since);
+            if (exerciseInfoIds.isEmpty()) {
+                return ExerciseHistoryResponse.builder()
+                        .lastSync(OffsetDateTime.now())
+                        .exerciseHistory(List.of())
+                        .build();
+            }
+            historyMapSets = setRepo.findHistoryMapByUserIdAndExercises(userId, exerciseInfoIds);
+        }
 
-        List<ExerciseHistoryDto> exerciseHistory = setsByExercise.entrySet().stream()
+        // Batch-fetch supplementary data
+        Map<Integer, List<Set>> historyByExercise = groupByExerciseInfoId(historyMapSets);
+        Map<Integer, List<Set>> lastWorkoutByExercise = groupByExerciseInfoId(
+                setRepo.findLastWorkoutLayoutByUserIdAndExercise(userId, exerciseInfoIds)
+        );
+        Map<Integer, Integer> maxPositions = parseMaxPositions(
+                setRepo.findMaxPositionByUserIdAndExercises(userId, exerciseInfoIds)
+        );
+
+        // Build one DTO per exercise
+        List<ExerciseHistoryDto> exerciseHistory = historyByExercise.entrySet().stream()
                 .map(entry -> {
                     Integer exerciseId = entry.getKey();
                     List<Set> exerciseSets = entry.getValue();
+                    List<Set> layoutSets = lastWorkoutByExercise.getOrDefault(exerciseId, List.of());
 
-                    String exerciseName = exerciseSets.getFirst().getExercise().getExerciseInfo().getName();
-
-                    // Find most recent performance
-                    OffsetDateTime lastPerformed = exerciseSets.stream()
-                            .map(Set::getCreatedAt)
-                            .max(OffsetDateTime::compareTo)
-                            .orElse(null);
-
-                    // Map all sets to history DTOs
-                    List<SetHistoryDto> setHistoryDtos = workoutMapper.toHistoryDtoList(exerciseSets);
-
-                    return ExerciseHistoryDto.builder()
-                            .exerciseInfoId(exerciseId)
-                            .exerciseName(exerciseName)
-                            .lastPerformed(lastPerformed)
-                            .allTimeSets(setHistoryDtos)
-                            .build();
+                    return buildExerciseHistoryDto(
+                            exerciseId,
+                            exerciseSets,
+                            layoutSets,
+                            maxPositions.get(exerciseId)
+                    );
                 })
                 .sorted(Comparator.comparing(ExerciseHistoryDto::getLastPerformed).reversed())
-                .collect(Collectors.toList());
+                .toList();
 
         return ExerciseHistoryResponse.builder()
                 .lastSync(OffsetDateTime.now())
@@ -197,22 +186,92 @@ public class WorkoutTrackingService {
     }
 
 
+    /** Build upload response with updated exercise history for cached exercises. */
+    private WorkoutUploadResponse buildWorkoutResponse(Workout workout, UUID userId) {
+        List<Integer> exerciseInfoIds = workout.getExercises().stream()
+                .map(exercise -> exercise.getExerciseInfo().getId())
+                .toList();
 
+        Map<Integer, List<Set>> historyByExercise = groupByExerciseInfoId(
+                setRepo.findHistoryMapByUserIdAndExercises(userId, exerciseInfoIds)
+        );
+        Map<Integer, Integer> maxPositions = parseMaxPositions(
+                setRepo.findMaxPositionByUserIdAndExercises(userId, exerciseInfoIds)
+        );
 
-    /**
-     * Helper method to build workout upload response.
-     * Used for both new uploads and idempotent duplicate uploads.
-     */
-    private WorkoutUploadResponse buildWorkoutResponse(Workout workout) {
-        var exerciseHistorySummary = workoutMapper.toExerciseHistorySummaryList(workout.getExercises());
+        List<ExerciseHistoryDto> newExerciseHistory = workout.getExercises().stream()
+                .map(exercise -> {
+                    Integer exerciseId = exercise.getExerciseInfo().getId();
+
+                    return buildExerciseHistoryDto(
+                            exerciseId,
+                            historyByExercise.getOrDefault(exerciseId, List.of()),
+                            null,
+                            maxPositions.get(exerciseId)
+                    );
+                })
+                .toList();
 
         return WorkoutUploadResponse.builder()
                 .workoutId(workout.getId())
-                .syncedAt(workout.getCreatedAt())
+                .syncedAt(OffsetDateTime.now())
                 .totalVolume(workout.getTotalVolume())
                 .numberOfSets(workout.getNumberOfSets())
-                .newExerciseHistory(exerciseHistorySummary)
+                .newExerciseHistory(newExerciseHistory)
                 .build();
     }
 
+    /** Build a single ExerciseHistoryDto from sets and optional layout. */
+    private ExerciseHistoryDto buildExerciseHistoryDto(Integer exerciseInfoId,
+                                                       List<Set> historySets,
+                                                       List<Set> layoutSets,
+                                                       Integer maxPosition) {
+        String exerciseName = historySets.getFirst()
+                .getExercise().getExerciseInfo().getName();
+
+        OffsetDateTime lastPerformed = historySets.stream()
+                .map(Set::getPerformedAt)
+                .max(OffsetDateTime::compareTo)
+                .orElse(null);
+
+        List<SetLookupEntryDto> historyMap = workoutMapper.toSetLookupEntryList(historySets);
+
+        List<SetLookupEntryDto> lastWorkoutLayout = (layoutSets != null)
+                ? workoutMapper.toSetLookupEntryList(layoutSets)
+                : null;
+
+        return ExerciseHistoryDto.builder()
+                .exerciseInfoId(exerciseInfoId)
+                .exerciseName(exerciseName)
+                .lastPerformed(lastPerformed)
+                .maxPosition(maxPosition)
+                .historyMap(historyMap)
+                .lastWorkoutLayout(lastWorkoutLayout)
+                .build();
+    }
+
+    /** Group sets by their exercise_info_id. */
+    private Map<Integer, List<Set>> groupByExerciseInfoId(List<Set> sets) {
+        return sets.stream()
+                .collect(Collectors.groupingBy(
+                        set -> set.getExercise().getExerciseInfo().getId()
+                ));
+    }
+
+    /** Extract distinct exercise_info_ids from a list of sets. */
+    private List<Integer> extractDistinctExerciseInfoIds(List<Set> sets) {
+        return sets.stream()
+                .map(set -> set.getExercise().getExerciseInfo().getId())
+                .distinct()
+                .toList();
+    }
+
+    /** Parse native query Object[] rows into a Map of exerciseInfoId to maxPosition. */
+    private Map<Integer, Integer> parseMaxPositions(List<Object[]> rows) {
+        return rows.stream()
+                .collect(Collectors.toMap(
+                        row -> (Integer) row[0],
+                        row -> ((Number) row[1]).intValue()
+                ));
+    }
 }
